--- a/custom-example.css
+++ b/custom-example.css
@@ -1,4 +1,5 @@
 /* put css overrides in this file */
+/* copy to custom.css to use */
 .theme-override {
     /* can be used to override discord theme colors, for example:
     --background-primary: #000000;
